war/css/SidebarDark.css
.westPanel {
    background-color: #167A66;
    font-weight: 200;
}

.stepSettings {
    font-size: 16px;
    color: #fff;
    background-image: url("../img/icons/icon_step_turkis.png");
    background-repeat: no-repeat;
    background-size: auto 50%;
    background-position: 3% center;
    background-color: #33495D;
    padding: 10px;
    display: flex;
    border-bottom: 0.2em solid #167A66;
    justify-content: space-between;
}

.stepSettings .leftAlign{
    margin-left: 30px;
    position: relative;
}
.stepSettings .gwt-TextBox {
    background-color: #33495D;
    border: none !important;
    border-bottom: 1px solid #b2b0b0 !important;
    text-align: center;
    /*border-radius: 15%;*/
    position: relative;
    bottom: 6px;
    line-height: 1em;
    color: #fff;
    height: 90%;
    width: 13%;
}

.standrard_db {
    color: #fff;
    background: url("../img/icons/icon_db.png") no-repeat !important;
    background-repeat: no-repeat;
    background-size: auto 60% !important;
    background-position: 3% center !important;
    border: none !important;
    border-bottom: 0.2em solid #167A66 !important;
    text-align: center;
    padding: 10px;
    display: flex;
    justify-content: space-between;
}

.user_db {
    color: #fff;
    background: url("../img/icons/icon_user_db.png") no-repeat !important;
    background-repeat: no-repeat;
    background-size: auto 70% !important;
    background-position: 3% center !important;
    background-color: #33495D !important;
    border: none !important;
    border-bottom: 0.2em solid #167A66 !important;
    text-align: center;
    display: flex;
    justify-content: space-between;
    padding: 10px;
}

.standrard_db .gwt-Label, .user_db .gwt-Label {
    margin-left: 37px;
    font-size: 16px;
    font-weight: 200;
}

.user_db .addButton {
    background: url("../img/icons/icon_plus.png") no-repeat center !important;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    width: 12px;
    height: 14px;
    top: 6px;
    right: 6px;
    position: relative;
    border: none;
}
.user_db .addButton:focus {
    border: none;
}

.extra_settings {
    background: #33495D;
    width: 100%
}

.extra_settings tbody tr {
    display: flex;
    flex-direction:column;
}

.extra_settings table {
    display: block;
    clear:both;
}

.extra_settings tr:nth-child(3) {
    z-index: 100;
}

.style-strategy {
    display: flex;
    flex-wrap: wrap;
}

.gwt-RadioButton {
    width: 49%;
    height: 100%;
    display: inline-block;
    border: 1px solid #177965;
    color: #fff;
    text-align: center;
    font-size: 1em;
}
.strategy .gwt-RadioButton input[type=radio] {
    position: absolute;
    visibility: hidden;
    display: none;
}

.strategy .gwt-RadioButton label {
    color: #fff;
    display: inline-block;
    cursor: pointer;
    font-weight: bold;
    padding: 5px 20px;
}

.strategy .gwt-RadioButton input[type=radio]:checked + label{
    background: #1e9e84;
    width: 70%;
    color: #000;
    
}

.night_mode {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    background-image: url("../img/icons/icon_night_mode.png");
    background-repeat: no-repeat;
    background-size: auto 50%;
    background-position: 5% center;
    background-color: #167A66;
}

.night_mode .gwt-CheckBox {
    position: relative;
    display: inline-block;
    width: 50px;
    height: 24px;
}

.night_mode .gwt-CheckBox input {
    display:none;
}

.night_mode .gwt-CheckBox label {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    border-radius: 24px;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.night_mode .gwt-CheckBox label:before {
    position: absolute;
    content: "";
    height: 18px;
    width: 18px;
    left: 5px;
    bottom: 3px;
    border-radius: 50%;
    background-color: #fff;
    -webkit-transition: .4s;
    transition: .4s;
}

.night_mode .gwt-CheckBox input:checked + label {
    background-color: #33485c;
}

.night_mode .gwt-CheckBox input:focus + label {
    box-shadow: 0 0 1px #33485c;
}

.night_mode .gwt-CheckBox input:checked + label:before {
    -webkit-transform: translateX(22px);
    -ms-transform: translateX(22px);
    transform: translateX(22px);
    background-color: #11ba98;
}



.night_mode .gwt-Label {
    margin-left: 30px;
    color: #fff;
    vertical-align: middle;
    line-height: 2em;
    font-size: 1.2em;
}
.share_language, .share_language >div, .share_language table {
    height: 40px;
    color: #fff;
    width: 100%;
}

.share_language tbody{
    width:100%;
    height: 100%;
    border-top: 2px solid #33485c;
    display: block;
}

.share_language tbody tr:first-child {
    border-right: 1px solid #33485c;
    display: flex;
    flex-direction: row;
    width:100%;
}
.share_language div table tbody tr td{
    width:49.5%;
    background-color: #167A66;
}
/* SHARE LANGUAGE HOVERING*/
.share_language .gwt-MenuItem-selected{
    background-color: rgba(255,255,255,0.2) !important;
}

.share_language .gwt-MenuItem {
    width: 100%;
    padding: 7px 0 !important;
    text-align: center ;
    vertical-align: middle;
    font-size: 16px
}

.share_language .gwt-MenuItem:first-child {
    border-right: 1px solid #33485c;
}
.share_language .subMenuIcon{
    display: none;
}

.share_language tbody tr td:nth-child(2) {
    background-image: url("../img/icons/icon_share.png");
    background-repeat: no-repeat;
    background-size: auto 50%;
    background-position: center center;
}

/* Language and Share: popup */

.shareAndLanguagePopup {
    left: 0 !important;
    bottom: 40px !important;
    top: unset !important;
}

.shareAndLanguagePopup *[class^="menuPopup"] {
    background: none !important;
}

.shareAndLanguagePopup .menuPopupMiddleLeft {
    display: none !important;
}

.shareAndLanguagePopup table {
    width: 105%;
    background: RGBA(93, 109, 125, 0.70);
}

.shareAndLanguagePopup .languageMenu tr, .shareAndLanguagePopup .shareMenu tr {
    color: #fff;
    display: block;
    border-bottom: 1px solid #fff;
    font-size: 22px;
    font-weight: 700;
}

.shareAndLanguagePopup .gwt-MenuItem {
    line-height: 25px;
    padding-left: 10px;
    padding-bottom: 4px;
    display: block;
    width:100%;
}

.shareAndLanguagePopup .languageMenu tr:last-child, .shareAndLanguagePopup .shareMenu tr:last-child {
    border-bottom: none;
}

.shareAndLanguagePopup .languageMenu tr:hover, .shareAndLanguagePopup .shareMenu tr:hover {
    background: RGBA(41, 186, 155, .70);
}

.gwt-ListBox {
    display: none;
}
/*LIBRARIES*/
.panelSettings .gwt-StackLayoutPanel div:nth-child(3) {
    height:80px;
    background: #33495D !important;
}

.panelSettings .gwt-StackLayoutPanel div:nth-child(4) table {
    width: 100%;
}

.panelSettings .gwt-StackLayoutPanel > div:nth-child(2), .panelSettings .gwt-StackLayoutPanel > div:nth-child(4) {
    overflow-y: scroll !important;
}

/*STYLES FOR USER LIBRARY: LAYOUT*/
.panelSettings .gwt-StackLayoutPanel > div:nth-child(2n) .gwt-StackLayoutPanelContent > tbody tr td:first-child {
    width: 30%;
    font-weight: 700;
}
.panelSettings .gwt-StackLayoutPanel > div:nth-child(2n) .gwt-StackLayoutPanelContent > tbody tr td:nth-child(2) {
    width: 60%;
    color: #c3c2c2;
    padding-right: 3px;
}


.panelSettings .gwt-StackLayoutPanel .gwt-StackLayoutPanelContent {
    background: #187965 !important;
    border: none;
}

.panelSettings .gwt-StackLayoutPanel .gwt-StackLayoutPanelContent tbody > tr{
    border-bottom: 1px solid #6D8A88;
    display: flex;
    padding: 5px 0;
}

.deleteUserLibraryItem {
    color: white;
    font-weight: 800;
    font-size: 15px;
    border: 1px solid #883332;
    background: #bc2423;
    border-radius: 3px;
}

/*
.gwt-MenuBarPopup {
    left:0 !important;
    bottom: 0;
    width: 130px;
    height: 10px;
     margin-bottom: 100px;
    padding-bottom: 100px;
}
.gwt-MenuBarPopup table {
    width: 100%;
}*/

